--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: voli
 description: A command-line app that adds boilerplate code to your flutter app!
-# version: 1.0.0
-# homepage: https://www.example.com
+version: 1.0.0-dev.1
+homepage: https://github.com/meta-boy/voli
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   yaml: ^2.2.0
@@ -12,6 +12,7 @@ dependencies:
   args: ^1.6.0
   http: ^0.12.0+4
   io: ^0.3.4
+  meta: ^1.1.8
 
 dev_dependencies:
   pedantic: ^1.8.0
